--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+//buildscript {
+//    repositories {
+//        google()
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:3.2.1'
+//        // Add the google services classpath
+//        classpath 'com.google.gms:google-services:4.3.0'
+//
+//    }
+//}
 allprojects {
     repositories {
         google()
