--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,15 @@ dependencies:
   dotted_line: ^3.2.2
   flutter_svg: ^2.0.10+1
   pinput: ^4.0.0
+  location_geocoder: ^1.0.5
   google_maps_flutter: ^2.6.1
   geolocator: ^12.0.0
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  permission_handler: ^11.3.1
+  fluttertoast: ^8.2.6
+  geocoding: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
