Google map integration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_screenutil: ^5.9.1
   gap: ^3.0.1
   dotted_line: ^3.2.2
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
   pinput: ^4.0.0
   location_geocoder: ^1.0.5
   google_maps_flutter: ^2.6.1
@@ -49,6 +49,11 @@ dependencies:
   permission_handler: ^11.3.1
   fluttertoast: ^8.2.6
   geocoding: ^3.0.0
+  google_api_headers: ^1.6.0
+  geocoder2: ^1.4.0
+  flutter_google_places: ^0.3.0
+  shared_preferences: ^2.2.3
+  dio: ^5.4.3+1
 
 
 dev_dependencies:
