--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
+  animation_list: ^3.0.0
 
 
 dev_dependencies:
