--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   razorpay_flutter: ^1.3.7
 
 
+  http: any
+  google_maps_webservice: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
