--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
   animation_list: ^3.0.0
+  flutter_polyline_points: ^1.0.0
   razorpay_flutter: ^1.3.7
 
 
@@ -65,6 +66,7 @@ dependencies:
   firebase_core: ^3.1.1
   flutter_local_notifications: ^17.2.1
   flutter_staggered_animations: ^1.1.1
+  location: ^7.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
