--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
   animation_list: ^3.0.0
+  device_info_plus: ^10.1.0
   flutter_polyline_points: ^1.0.0
   razorpay_flutter: ^1.3.7
 
