--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   flutter_local_notifications: ^17.2.1
   flutter_staggered_animations: ^1.1.1
   location: ^7.0.0
+  dropdown_plus_plus: ^0.1.1+1
+  textfield_search: ^0.11.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
