--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,13 +58,13 @@ dependencies:
   device_info_plus: ^10.1.0
   flutter_polyline_points: ^1.0.0
   razorpay_flutter: ^1.3.7
-
-
+  connectivity_plus: ^6.0.4
+  lottie: ^3.0.0
   http: any
   google_maps_webservice: any
   change_app_package_name: ^1.2.0
   firebase_messaging: ^15.0.2
-  firebase_core: ^3.1.1
+  firebase_core: ^3.0.0
   flutter_local_notifications: ^17.2.1
   flutter_staggered_animations: ^1.1.1
   location: ^7.0.0
@@ -96,6 +96,7 @@ flutter:
   assets:
     - assets/images/svg/
     - assets/images/png/
+    - assets/animation/lottie/
     - "assets/images/png/location-marker.png"
   #   - images/a_dot_ham.jpeg
 
