--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   location: ^7.0.0
   dropdown_plus_plus: ^0.1.1+1
   textfield_search: ^0.11.1
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
